# allinonescraper

./: .gitignore  README.md  README_avatar.md  app.py  requirements.txt  setup.cfg
.github/workflows/: windows-release.yml
src/scrape_tui/: autofix.py  avatar_assets.py  avatar_renderer.py  avatar_widget.py  cli.py  errors.py  images.py  settings.py  textual_app.py  textual_download.py  utils.py  video.py
