[metadata]
name = scrape-tui
version = 0.1.0
description = All-in-one downloader TUI (videos + images) powered by Rich
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    beautifulsoup4>=4.12.0
    requests>=2.31.0
    rich>=13.7.0
    yt-dlp>=2024.7.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scrape = scrape_tui.cli:main
    allinonescraper = scrape_tui.cli:main
